--- a/templates/isc-dhcp-server.j2
+++ b/templates/isc-dhcp-server.j2
@@ -1,7 +1,7 @@
 # {{ ansible_managed }}
 
-DHCPD_CONF=/etc/dhcp/dhcpd.conf
+DHCPDv4_CONF=/etc/dhcp/dhcpd.conf
 
-{% if isc_dhcp_server_interfaces is defined and isc_dhcp_server_interfaces | length >0 %}
-INTERFACESv4="{{ isc_dhcp_server_interfaces | default([]) | join(" ") }}"
+{% if isc_dhcp_server_interfaces | default([]) != [] %}
+INTERFACESv4="{{ isc_dhcp_server_interfaces | join(" ") }}"
 {% endif %}
