--- a/templates/dhcpd.conf.j2
+++ b/templates/dhcpd.conf.j2
@@ -5,13 +5,13 @@
 {% endfor %}
 
 {% for subnet, options in isc_dhcp_server_subnets.items() %}
-{% if subnet | ipv4 %}
-subnet {{ subnet | ipaddr('network') }} netmask {{ subnet | ipaddr('netmask') }} {
+{% if subnet | ansible.netcommon.ipv4 %}
+subnet {{ subnet | ansible.netcommon.ipaddr('network') }} netmask {{ subnet | ansible.netcommon.ipaddr('netmask') }} {
 {% if options | map('regex_search', '^range ') | select('string') | length == 0 %}
-  range {{ subnet | ipaddr('100') | ipaddr('address') }} {{ subnet | ipaddr('-2') | ipaddr('address') }};
+  range {{ subnet | ansible.netcommon.ipaddr('100') | ansible.netcommon.ipaddr('address') }} {{ subnet | ansible.netcommon.ipaddr('-2') | ansible.netcommon.ipaddr('address') }};
 {% endif %}
 {% if options | map('regex_search', '^option routers ') | select('string') | length == 0 %}
-  option routers {{ subnet | ipaddr('address') }};
+  option routers {{ subnet | ansible.netcommon.ipaddr('address') }};
 {% endif %}
 {% for option in options %}
   {{ option }};
